@@ -3,7 +3,7 @@
 /*
  * LMS version 1.11-git
  *
- *  (C) Copyright 2001-2016 LMS Developers
+ *  (C) Copyright 2001-2017 LMS Developers
  *
  *  Please, see the doc/AUTHORS for more information about authors!
  *
@@ -24,7 +24,7 @@
  *  $Id$
  */
 
-function GetEvents($date=NULL, $userid=0, $customerid=0, $privacy = 0, $closed = '')
+function GetEvents($date=NULL, $userid=0, $type = 0, $customerid=0, $privacy = 0, $closed = '')
 {
 	global $AUTH;
 
@@ -61,10 +61,11 @@ function GetEvents($date=NULL, $userid=0, $customerid=0, $privacy = 0, $closed =
 		) cc ON cc.customerid = c.id
 		 WHERE ((date >= ? AND date < ?) OR (enddate <> 0 AND date < ? AND enddate >= ?)) AND ' . $privacy_condition
 		 .($customerid ? 'AND customerid = '.intval($customerid) : '')
-		.($userid ? ' AND EXISTS (
+		.(!empty($userid) ? ' AND EXISTS (
 			SELECT 1 FROM eventassignments
-			WHERE eventid = events.id AND userid = '.intval($userid).'
+			WHERE eventid = events.id AND userid ' . (is_array($userid) ? 'IN (' . implode(',', array_filter($userid, 'intval')) . ')' : '=' . intval($userid)) . '
 			)' : '')
+		. (!empty($type) ? ' AND events.type ' . (is_array($type) ? 'IN (' . implode(',', array_filter($type, 'intval')) . ')' : '=' . intval($type)) : '')
 		 . ($closed != '' ? ' AND closed = ' . intval($closed) : '')
 		 .' ORDER BY date, begintime',
 		array(CONTACT_MOBILE | CONTACT_FAX | CONTACT_LANDLINE, CONTACT_DISABLED,
@@ -97,7 +98,7 @@ if(!$date)
 	$SESSION->redirect('?m=eventlist');
 }
 
-$eventlist = GetEvents($date, $_GET['a'], $_GET['u'], intval($_GET['privacy']), $_GET['closed']);
+$eventlist = GetEvents($date, $_GET['a'], $_GET['t'], $_GET['u'], intval($_GET['privacy']), $_GET['closed']);
 
 $layout['pagetitle'] = trans('Timetable');
 
