@@ -52,6 +52,7 @@ version ?.??.?? (????-??-??):
     ('false' by default) controls if related cash records are created for proforma
     invoices [chilan]
   - enhancement: allow to view and search tickets from many queues and categories [chilan]
+  - enhancement: allow to view and search events selecting many types and owners [chilan]
 
 version 1.11.22 (2017-06-08):
 
